Add Formulario Calculadora

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,21 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h3>calculadora 4 operações</h3>
+      <form>
+        <input type="number" id="numero1" placeholder="digite nº1" /><br />
+        <input type="number" id="numero2" placeholder="digite nº2" /><br />
+        <button id="btn-calcular">calcular</button>
+      </form>
+      <!-- começo do bloco de resultados -->
+      <div class="resultados">
+        <p class="soma">a soma é: 10</p>
+        <p class="subtracao">a subitração é: 0</p>
+        <p class="mutiplicacao">a multiplicação: é 25</p>
+        <p class="divisao">a divisão é: 1</p>
+      </div>
+    </div>
 
     <script src="./index.mjs" type="module"></script>
   </body>
