feat: funcoes adicao sub e mult + btnLimpar

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,17 @@
       <form>
         <input type="number" id="numero1" placeholder="digite nº1" /><br />
         <input type="number" id="numero2" placeholder="digite nº2" /><br />
-        <button id="btn-calcular">calcular</button>
+
+        <div class="botoes">
+          <button id="btn-calcular">CALCULAR</button>
+          <button id="btn-limpar">LIMPAR</button>
+        </div>
       </form>
       <!-- começo do bloco de resultados -->
       <div class="resultados">
         <p class="soma">a soma é: 10</p>
         <p class="subtracao">a subitração é: 0</p>
-        <p class="mutiplicacao">a multiplicação: é 25</p>
+        <p class="multiplicacao">a multiplicação: é 25</p>
         <p class="divisao">a divisão é: 1</p>
       </div>
     </div>
