Feat: add  toogle result box classes

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
     <div id="app">
       <h3>calculadora 4 operações</h3>
       <form>
-        <input type="number" id="numero1" placeholder="digite nº1" /><br />
-        <input type="number" id="numero2" placeholder="digite nº2" /><br />
+        <div class="inputs">
+          <input type="number" id="numero1" placeholder="digite nº1" /><br />
+          <input type="number" id="numero2" placeholder="digite nº2" /><br />
+        </div>
 
         <div class="botoes">
           <button id="btn-calcular">CALCULAR</button>
@@ -19,7 +21,7 @@
         </div>
       </form>
       <!-- começo do bloco de resultados -->
-      <div class="resultados">
+      <div class="resultados esconder">
         <p class="soma">a soma é: 10</p>
         <p class="subtracao">a subitração é: 0</p>
         <p class="multiplicacao">a multiplicação: é 25</p>
